okay-arrow stage 0: the module (test-only Arrow Java 19), interop both ways, ArrowIpcBench's four pairs
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LZNspDq7ZU8TRfNoTnpRMD